# MellowPlayer

./: .appveyor.yml  .clang-format  .clang-tidy  .codecov.yml  .gitignore  .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  appveryor.yml  appveyor.yml  com.gitlab.ColinDuquesnoy.MellowPlayer.yml
src/lib/application/: CMakeLists.txt
src/lib/domain/: CMakeLists.txt
src/lib/domain/src/: stdafx.h
src/lib/domain/src/Player/: CurrentPlayer.cpp
src/lib/infrastructure/: CMakeLists.txt
src/lib/infrastructure/resources/: infrastructure.qrc
src/lib/infrastructure/resources/PluginTemplate/: integration.js
src/lib/infrastructure/resources/scripts/: install-mellowplayer-connect.ps1  install-mellowplayer-connect.sh
src/lib/infrastructure/src/Application/: ApplicationStatusFile.cpp  SingleInstance.cpp
src/lib/infrastructure/src/CommandLineArguments/: CommandLineArguments.cpp
src/lib/infrastructure/src/Logging/: SpdLogger.cpp
src/lib/infrastructure/src/StreamingServices/: StreamingServiceLoader.cpp
src/lib/infrastructure/src/Updater/: Asset.cpp  Updater.cpp
src/lib/presentation/: CMakeLists.txt
src/lib/presentation/imports/: imports.qrc
src/lib/presentation/imports/MellowPlayer/: Actions.qml  ApplicationRoot.qml  DevToolsWindow.qml  Dialogs.js  MainAppWindow.qml  MainWindow.qml  MaterialIcons.qml  SettingsTranslator.js  cpp.qmltypes  qmldir
src/lib/presentation/resources/: mellowplayer.js  presentation.qrc
src/lib/presentation/resources/themes/: Default.json  Ubuntu.json
src/lib/presentation/src/: HiDPISupport.cpp
src/lib/presentation/src/Factories/: SettingViewModelFactory.cpp
src/lib/presentation/src/Models/: ListeningHistoryProxyListModel.cpp
src/lib/presentation/src/Notifications/: SystemTrayIcon.cpp
src/lib/presentation/src/ViewModels/: ApplicationViewModel.cpp  ViewModels.cpp
src/main/: CMakeLists.txt  DI.hpp  Program.cpp  Program.hpp  main.cpp  main.qml
src/main/languages/: MellowPlayer_ar.ts  MellowPlayer_ar_LB.ts  MellowPlayer_ca.ts  MellowPlayer_da.ts  MellowPlayer_de.ts  MellowPlayer_el.ts  MellowPlayer_en.ts  MellowPlayer_es.ts  MellowPlayer_fa_IR.ts  MellowPlayer_fi.ts  MellowPlayer_fr.ts  MellowPlayer_hu.ts  MellowPlayer_it_IT.ts  MellowPlayer_pt_BR.ts  MellowPlayer_ru.ts  MellowPlayer_sr_BA@latin.ts  MellowPlayer_sr_RS.ts  languages.qrc
src/main/share/metainfo/: com.gitlab.ColinDuquesnoy.MellowPlayer.metainfo.xml  com.gitlab.ColinDuquesnoy.MellowPlayer.metainfo.xml.in
src/tests/: CMakeLists.txt
src/tests/IntegrationTests/Infrastructure/: QtConcurrentWorkDispatcherTests.cpp
src/tests/IntegrationTests/Infrastructure/AlbumArt/: AlbumArtDownloaderTests.cpp
src/tests/IntegrationTests/Infrastructure/ListeningHistory/: SqlLiteListeningHistoryDataProviderTests.cpp
src/tests/IntegrationTests/Infrastructure/Network/: FileDownloaderTests.cpp  LocalServerIntegrationTests.cpp
src/tests/IntegrationTests/Infrastructure/StreamingServices/: StreamingServiceWatcherTests.cpp
src/tests/IntegrationTests/Infrastructure/Updater/: HttpClientTests.cpp
src/tests/IntegrationTests/Infrastructure/UserScripts/: UserScriptTests.cpp
src/tests/IntegrationTests/Mpris/: Mpris2PlayerTests.cpp  Mpris2RootTests.cpp  MprisServiceTests.cpp
src/tests/IntegrationTests/Presentation/: LoadQmlTests.cpp
src/tests/IntegrationTests/Presentation/Notifications/: LibnotifyPresenterTests.cpp  SystemTrayIconTests.cpp
src/tests/UnitTests/Domain/ListeningHistory/: ListeningHistoryEntryTests.cpp  ListeningHistoryTests.cpp
src/tests/UnitTests/Domain/Logging/: FakeLogger.hpp  FakeLoggerFactory.hpp  LoggingManagerTests.cpp
src/tests/UnitTests/Domain/Player/: CurrentPlayerTests.cpp  PlayerTests.cpp  SongTests.cpp
src/tests/UnitTests/Domain/Settings/: FakeSettingsStore.hpp  SettingsTests.cpp
src/tests/UnitTests/Domain/StreamingServices/: FakeStreamingServiceLoader.hpp  FakeStreamingServiceWatcher.hpp  StreamingServiceMetadataTests.cpp  StreamingServiceScriptTests.cpp  StreamingServiceTests.cpp  StreamingServicesTests.cpp
src/tests/UnitTests/Domain/UserScripts/: FakeUserScript.hpp  UserScriptBaseTests.cpp  UserScriptsTests.cpp
src/tests/UnitTests/Infrastructure/AlbumArt/: LocalAlbumArtTests.cpp
src/tests/UnitTests/Infrastructure/Application/: ApplicationDecoratorTests.cpp  ApplicationTests.cpp  FakeApplication.hpp  FakeQtApplication.hpp  SingleInstanceTests.cpp  WithCommandLineArgumentsTests.cpp  WithLoggingTests.cpp
src/tests/UnitTests/Infrastructure/Network/: ApplicationNetworkProxyTests.cpp  FakeLocalServer.hpp  FakeLocalSocket.hpp  NetworkProxiesTests.cpp  NetworkProxyTests.cpp
src/tests/UnitTests/Infrastructure/PlatformFilters/: AllFilterTests.cpp  AppImageFilterTests.cpp  FilterConverterTests.cpp  LinuxFilterTests.cpp  OsxFilterTests.cpp  PlatformFilterFactoryTests.cpp  PlatformFiltersTests.cpp  TokenizedFilterTests.cpp  WindowsFilterTests.cpp
src/tests/UnitTests/Presentation/: FakeMainWindow.hpp  HiDPISupportTests.cpp  HotkeysTests.cpp  IconProviderTests.cpp
src/tests/lib/: CMakeLists.txt  TestMacros.hpp  TestsRunner.cpp  TestsRunner.hpp  stdafx.h
src/tests/lib/Fakes/: AlbumArtDownloaderMock.hpp  FakeAlbumArtDownloader.hpp  FakeBinTrayHttpClient.cpp  FakeBinTrayHttpClient.hpp  FakeCommnandLineArguments.hpp  FakeFileDownloader.hpp  FakeHttpClient.cpp  FakeHttpClient.hpp  FakeHttpClientFactory.cpp  FakeHttpClientFactory.hpp  FakeListeningHistoryDatabase.hpp  FakeLocalAlbumArt.hpp  FakeLocalServer.hpp  FakeNetworkProxies.hpp  FakeNotificationPresenter.hpp  FakePlatformUpdater.hpp  FakePlayer.hpp  FakeQmlApplicationEngine.hpp  FakeQmlSingleton.hpp  FakeQmlSingletons.hpp  FakeStreamingServiceCreator.hpp  FakeStreamingServiceLoader.hpp  FakeStreamingServiceWatcher.hpp  FakeSystemTrayIcon.hpp  FakeThemeLoader.hpp  FakeUserScript.hpp  FakeUserScriptFactory.hpp  FakeWorkDispatcher.hpp
src/tests/lib/Mocks/: FakeCommnandLineArguments.hpp  FakeListeningHistoryDatabase.hpp  FakePlatformUpdater.hpp  MprisServiceMock.hpp  ThemeLoaderMock.hpp
src/tests/lib/Utils/: DependencyPool.cpp  DependencyPool.hpp  Helpers.cpp
(+672 files in other folders)
